syntax = "proto3";

package ECC.DanceCup.Api.Presentation.Grpc;

option csharp_namespace = "ECC.DanceCup.Api.Presentation.Grpc";

service DanceCupApi {
    rpc GetDances (GetDancesRequest) returns (GetDancesResponse);
    
    rpc CreateTournament (CreateTournamentRequest) returns (CreateTournamentResponse);
}

message GetDancesRequest { }

message GetDancesResponse {
    repeated Dance dances = 1;
}

message Dance {
    int64 id = 1;
    string short_name = 2;
    string name = 3;
}

message CreateTournamentRequest {
}
        
message CreateTournamentResponse {
    int64 tournament_id = 1;
}